[package]
name = "mch"
version = "0.0.1-alpha.3"
edition = "2024"
license = "AGPL-3.0-or-later"
description = "Mighty Copy with Hash (mch) - copy/move with post-copy verification (default: BLAKE3)."
repository = "https://github.com/Olize/mch"
readme = "README.md"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }

blake3 = "1"
sha2 = "0.10"
sha3 = "0.10"
blake2 = "0.10"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
hex = "0.4"

rayon = "1"
